# fulgur-chart

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  codecov.yml  cqass28pua0em5odshuqnbhmvkobiaoe  lefthook.yml  manifest  mise.toml  release-plz.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: chart-cli-npm-release.yml  chart-server-ci.yml  chart-server-docker.yml  ci.yml  node-npm-release.yml  release-plz.yml  ruby-gem-release.yml
crates/bindings/node/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
crates/bindings/node/__test__/: builder.test.mjs  fixtures.mjs  types.ts
crates/bindings/node/npm/darwin-arm64/: README.md  package.json
crates/bindings/node/npm/darwin-x64/: README.md  package.json
crates/bindings/node/npm/linux-arm64-gnu/: README.md  package.json
crates/bindings/node/npm/linux-x64-gnu/: README.md  package.json
crates/bindings/node/npm/linux-x64-musl/: README.md  package.json
crates/bindings/node/npm/win32-x64-msvc/: README.md  package.json
crates/bindings/node/src/: lib.rs
crates/bindings/python/: .gitignore  Cargo.toml  pyproject.toml
crates/bindings/python/python/fulgur_chart/: __init__.py
crates/bindings/python/src/: lib.rs
crates/bindings/python/tests/: test_chart_builder.py  test_chart_ctor.py  test_fulgur_chart.py
crates/bindings/ruby/ext/fulgur_chart/: Cargo.toml  extconf.rb
crates/bindings/ruby/ext/fulgur_chart/src/: lib.rs
crates/bindings/wasm/: .gitignore  .npmignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
crates/bindings/wasm/__test__/: browser-smoke.mjs  builder.test.mjs  fixtures.mjs  handle-lifetime.test.mjs  types.ts
crates/bindings/wasm/src/: lib.rs
crates/chart-server/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  llms.txt  railway.toml  wrangler.toml
crates/chart-server/src/: backend.rs  config.rs  file_store.rs  lib.rs  main.rs  render.rs  response.rs  server.rs  state.rs  store.rs
crates/chart-server/src/handlers/: chart.rs  mcp.rs  meta.rs  mod.rs  openapi.rs  shortlink.rs  validate.rs
crates/chart-server/tests/: public_api.rs
crates/fulgur-chart/: Cargo.toml
crates/fulgur-chart-cli/: Cargo.toml
crates/fulgur-chart-cli/src/: main.rs
crates/fulgur-chart-cli/tests/: cli.rs
crates/fulgur-chart/benches/: README.md  cases.rs  membench.rs  membench_baseline.json  membench_check.rs  render.rs
crates/fulgur-chart/src/: color.rs  font.rs  guard.rs  ir.rs  lib.rs  model.rs  num.rs  palette.rs  raster.rs  raster_direct.rs  render.rs  scale.rs  scene.rs  svg.rs  temporal.rs  text.rs
crates/fulgur-chart/src/frontend/: chartjs.rs  mod.rs  vegalite.rs
crates/fulgur-chart/src/layout/: bar.rs  boxplot.rs  common.rs  decimate.rs  gauge.rs  line.rs  matrix.rs  mixed.rs  mod.rs  monotone.rs  outlabeled_pie.rs  pie.rs  polar_area.rs  progress.rs  radar.rs  sankey.rs  scatter.rs  sparkline.rs  treemap.rs  vega_rect.rs  wordcloud.rs
crates/fulgur-chart/src/schema/: chartjs.rs  common.rs  mod.rs  vegalite.rs
crates/fulgur-chart/tests/: bench_cases.rs  frontend_chartjs.rs  frontend_vegalite.rs  golden_png.rs  inspect_model.rs  membench_check.rs  opaque_bg_no_partial_alpha.rs  render_axis_styling.rs  render_bar.rs  render_bubble.rs  render_datalabels.rs  render_gauge.rs  render_gradient.rs  render_legend.rs  render_line.rs  render_matrix.rs  render_mixed.rs  render_pie.rs  render_polar_area.rs  render_progress.rs  render_radar.rs  render_sankey.rs  render_scatter.rs  render_sparkline.rs  render_stacked_bar.rs  render_theme.rs  render_treemap.rs  render_vega_rect.rs  render_vegalite_temporal_line.rs  render_wordcloud.rs  wasm_runtime.rs
crates/fulgur-chart/tests/snapshots/: inspect_model__snapshot_bar_horizontal_model.snap  inspect_model__snapshot_bar_model.snap  inspect_model__snapshot_line_model.snap  inspect_model__snapshot_pie_model.snap  inspect_model__snapshot_scatter_model.snap  render_axis_styling__axis_border_dashed_snapshot.snap  render_axis_styling__axis_grid_color_snapshot.snap  render_axis_styling__axis_title_basic_snapshot.snap  render_bar__bar_snapshot.snap  render_bar__horizontal_bar_snapshot.snap  render_bubble__bubble_snapshot.snap  render_gauge__gauge_snapshot.snap  render_gauge__radial_gauge_snapshot.snap  render_line__area_snapshot.snap  render_line__line_snapshot.snap  render_line__offset_snapshot.snap  render_line__tension_snapshot.snap  render_matrix__matrix_snapshot.snap  render_mixed__mixed_snapshot.snap  render_pie__pie_snapshot.snap  render_polar_area__polar_area_snapshot.snap  render_polar_area__polar_area_snapshot_suggested_max_expands_domain.snap  render_progress__progress_snapshot.snap  render_radar__radar_snapshot.snap  render_radar__radar_snapshot_begin_at_zero_with_suggested_range.snap  render_radar__radar_snapshot_fixed_domain.snap  render_sankey__sankey_snapshot.snap  render_scatter__scatter_snapshot.snap  render_sparkline__sparkline_snapshot.snap  render_stacked_bar__horizontal_stacked_snapshot.snap  render_stacked_bar__vertical_stacked_snapshot.snap  render_stacked_bar__vertical_stacked_with_datalabels_snapshot.snap  render_treemap__treemap_snapshot.snap  render_vega_rect__rect_missing_cells_snapshot.snap  render_vega_rect__rect_nominal_snapshot.snap  render_vega_rect__rect_quantitative_snapshot.snap  render_vegalite_temporal_line__dogfood_fixture_svg_snapshot.snap  render_wordcloud__wordcloud_snapshot.snap
docs/: binding-api-contract.md  releasing.md
docs/plans/: 2026-06-17-datalabels.md  2026-06-17-fulgur-chart-design.md  2026-06-17-fulgur-chart-v1-implementation.md  2026-06-19-auto-dsl-detect.md  2026-06-19-schema-subcommand-schemars.md  2026-06-20-binding-api-surface.md  2026-06-20-matrix-chart.md  (+52 more)
examples/: README.md  report.html
tools/: .gitignore  chartjs_ticks.mjs  package-lock.json  package.json
(+69 files in other folders)
