[workspace]
resolver = "2"
members = ["crates/fulgur-chart", "crates/fulgur-chart-cli"]
exclude = ["crates/bindings"]

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fulgur-rs/fulgur-chart"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tiny-skia = "0.11"
ttf-parser = "0.25"
insta = { version = "1", features = ["yaml"] }
schemars = { version = "1.2", features = ["preserve_order"] }
