[package]
name = "fulgur-chart-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fulgur-chart"
path = "src/main.rs"

[dependencies]
fulgur-chart = { path = "../fulgur-chart" }
clap = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
