[package]
name = "fulgur-chart-cli"
version = "0.1.10"
description = "CLI for rendering chart.js-compatible JSON specs to deterministic SVG/PNG"
keywords = ["chart", "svg", "chartjs", "cli", "visualization"]
categories = ["command-line-utilities", "graphics"]
readme = "../../README.md"
documentation = "https://github.com/fulgur-rs/fulgur-chart"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fulgur-chart"
path = "src/main.rs"

[dependencies]
fulgur-chart = { path = "../fulgur-chart", version = "0.10.0" }
clap = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
