[package]
name = "fulgur-chart"
version = "0.9.0"
description = "Render chart.js-compatible JSON specs to deterministic static SVG/PNG"
keywords = ["chart", "svg", "chartjs", "visualization", "png"]
categories = ["graphics", "visualization"]
readme = "../../README.md"
documentation = "https://docs.rs/fulgur-chart"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
autobenches = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tiny-skia = { workspace = true }
schemars = { workspace = true }
ttf-parser = { workspace = true }
dhat = { version = "0.3.3", optional = true }

[features]
# Enables the dhat global allocator for the `membench` bench target only.
dhat-heap = ["dep:dhat"]

[dev-dependencies]
criterion = "0.7.0"
insta = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[bench]]
name = "render"
harness = false
