[package]
name = "fulgur-chart"
version = "0.11.1"
description = "Render chart.js-compatible JSON specs to deterministic static SVG/PNG"
keywords = ["chart", "svg", "chartjs", "visualization", "png"]
categories = ["graphics", "visualization"]
readme = "../../README.md"
documentation = "https://docs.rs/fulgur-chart"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
autobenches = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tiny-skia = { workspace = true }
schemars = { workspace = true }
ttf-parser = { workspace = true }
dhat = { version = "0.3.3", optional = true }

[features]
# Enables the dhat global allocator for the `membench` bench target only.
dhat-heap = ["dep:dhat"]

[dev-dependencies]
insta = { workspace = true }

# criterion pulls in rayon, which refuses to compile for wasm32. The speed bench
# never runs on wasm, so keep criterion off the wasm dev-dep graph — otherwise
# `wasm-pack test` (which runs `cargo build --tests`) tries to compile it and
# fails with rayon's "cannot be used when targeting wasi32" compile_error.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.7.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[bench]]
name = "render"
harness = false

[[bench]]
name = "membench"
harness = false
required-features = ["dhat-heap"]
