[workspace]

[package]
name = "fulgur_chart"
version = "0.6.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[lib]
name = "fulgur_chart"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["abi3-py38"] }
fulgur-chart = { path = "../../fulgur-chart" }
serde_json = "1"
schemars = "1"
