[package]
name = "fulgur_chart"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = "0.7"
fulgur-chart = { path = "../../../../fulgur-chart" }
serde_json = "1"
schemars = { version = "1.2", features = ["preserve_order"] }

[build-dependencies]
rb-sys-env = "0.1"
