[package]
name = "fulgur_chart"
version = "0.2.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = "0.7"
# Raw libruby bindings for rb_thread_call_without_gvl (magnus 0.7 does not wrap it).
# Already pulled in transitively by magnus; declaring it directly unifies to the same
# version and makes the symbol importable.
rb-sys = "0.9"
fulgur-chart = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.2", features = ["preserve_order"] }
